# whereabouts

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
pipeline/: fetch-boundary.ts  fetch-buildings.ts  fetch-exclusions.ts  fetch-neighborhoods.ts  fetch-presets.ts  sample-data.ts
pipeline/python/: README.md  build_matrices.py  preflight.py  pyproject.toml
public/data/sf/: manifest.json  neighborhoods.geojson
public/data/sf/presets/: beaches.json  daycare.json  dog-parks.json  farmers-markets.json  golden-gate-park.json  grocery-stores.json  gyms.json  index.json  libraries.json  ocean-beach.json  panhandle.json  pharmacies.json  pilates-studios.json  playgrounds.json  presidio.json  public-elementary-schools.json  public-high-schools.json  public-middle-schools.json  swimming-pools.json  yoga-studios.json
src/: main.ts  style.css
src/compute/: colors.ts  grid.ts  score.ts  travel.ts
src/data/: matrix.ts  neighborhoods.ts  snap.ts
src/map/: basemap.ts  geocode.ts  overlay.ts
src/presets/: loader.ts
src/state/: store.ts  types.ts
src/ui/: bubbles.ts  chain-popup.ts  group-popup.ts  panel.ts  popup.ts  sheet.ts
src/workers/: compute.worker.ts
