[project]
name = "whereabouts-pipeline"
version = "0.1.0"
description = "r5py travel-time matrix precompute for Whereabouts"
requires-python = ">=3.10"
dependencies = [
  "r5py>=0.1.2",
  "h3>=4.1",
  "geopandas>=1.0",
  "shapely>=2.0",
  "numpy>=2.0",
  "pandas>=2.2",
  "requests>=2.32",
]

[tool.uv]
managed = true
